Bug 156475 - If there are empty cells in the column, then the change tracking deletion does not work.
Summary: If there are empty cells in the column, then the change tracking deletion doe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-07-26 08:47 UTC by NISZ LibreOffice Team
Modified: 2025-12-03 08:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-07-26 08:47:56 UTC
Description:
If there are empty cells in the column, then the change tracking deletion does not work.
When one cell is empty but the others are not, the result is very inconsistent operation. If they are all empty, it will delete the column without change tracking.

Steps to Reproduce:
1. Insert a table column with change tracking
2. Delete one column whose cells are empty


Actual Results:
If all the cells in the column are empty, it will delete the column without change tracking.

Expected Results:
If all the cells in the column are empty, it will not delete the column without change tracking.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 42f0422d19c4d0a2fb09654fb6d1d92e50f6dd5c
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2023-07-27 21:46:00 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe43f5971dfd2a121634eea9e39c7ad0cf3f962a

tdf#156475 sw tracked table column: delete empty cell

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-08-02 10:15:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e91faddabdf5d586c0044a3e125bdea6c2e21532

tdf#156475 sw tracked table column: delete empty cell

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.