tdf#156475 sw tracked table column: delete empty cell

Tracking changes, only non-empty cells of the deleted
columns got coloring, and were hidden in Hide Changes
mode.

Add dummy text content to empty cells of the deleted
columns to get visible deletion in Show Changes mode,
also working context menu in that cell; to allow hiding
them in Hide Changes mode, also to store the time stamp
of the deletion, if all the other rows are removed during
editing.

Follow-up to commit 472abf99a4d90d7a53316394a2e51a26b7e62345
"tdf#155341 sw tracked table column: add insertion".

Change-Id: Ieb5d237b3c82c81fded25608ef3d2906d7474003
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154994
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit fe43f5971dfd2a121634eea9e39c7ad0cf3f962a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154962